--- a/Semana_2_y_3_.ipynb
+++ b/Semana_2_y_3_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQMwBOtJwYEOjy3hKa0dJG",
+      "authorship_tag": "ABX9TyNETL4wkFOh+coklujdWjci",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,6 +98,95 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Situación 1: Verificación de Resistencia de Concreto Un laboratorio de materiales ensaya probetas\n",
+        "de concreto a los 28 días. El concreto es de tipo “G-25”, lo que significa que debe tener una resistencia mínima\n",
+        "de 25 MPa.\n",
+        "\n",
+        " El programa debe indicar si la probeta cumple, está por debajo o supera excepcionalmente la\n",
+        "norma (más de 30 MPa).\n",
+        "\n",
+        "Paso a Paso del Código (Guía para el Notebook)\n",
+        "1. # Explicar que el programa verifica la resistencia de una probeta de concreto.\n",
+        "2. # Pedir al usuario que ingrese la resistencia obtenida en el ensayo (en MPa).\n",
+        "3. # Almacenar el resultado en una variable.\n",
+        "4. # Usar una condición 'if' para ver si la resistencia es menor a 25.\n",
+        "5. # Si es así, imprimir \"NO CUMPLE con la norma G-25\".\n",
+        "6. # Usar una condición 'elif' para ver si la resistencia es mayor o igual a 25 Y a\n",
+        "la vez menor o igual a 30.\n",
+        "7. # Si es así, imprimir \"CUMPLE con la norma G-25\".\n",
+        "8. # Usar 'else' para el caso restante (mayor a 30).\n",
+        "9. # En el 'else', imprimir \"CUMPLE y supera excepcionalmente la norma G-25\".\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "qa7AgsYuKbTa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Y0Vdu-agLErK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f6800605",
+        "outputId": "4d31f6fd-42f9-4f37-c645-39a2243374e4"
+      },
+      "source": [
+        "# Explicar que el programa verifica la resistencia de una probeta de concreto.\n",
+        "print(\"Este programa verifica la resistencia de una probeta de concreto.\")\n",
+        "\n",
+        "# Pedir al usuario que ingrese la resistencia obtenida en el ensayo (en MPa).\n",
+        "# Almacenar el resultado en una variable.\n",
+        "while True:\n",
+        "    resistencia_str = input(\"Ingrese la resistencia obtenida en el ensayo (en MPa): \")\n",
+        "    if not resistencia_str:\n",
+        "        print(\"Por favor, ingrese un valor de resistencia.\")\n",
+        "    else:\n",
+        "        try:\n",
+        "            resistencia = float(resistencia_str)\n",
+        "            break  # Exit the loop if conversion is successful\n",
+        "        except ValueError:\n",
+        "            print(\"Entrada inválida. Por favor ingrese un número válido.\")\n",
+        "\n",
+        "# Usar una condición 'if' para ver si la resistencia es menor a 25.\n",
+        "if resistencia < 25:\n",
+        "    # Si es así, imprimir \"NO CUMPLE con la norma G-25\".\n",
+        "    print(\"NO CUMPLE con la norma G-25\")\n",
+        "# Usar una condición 'elif' para ver si la resistencia es mayor o igual a 25 Y a\n",
+        "# la vez menor o igual a 30.\n",
+        "elif 25 <= resistencia <= 30:\n",
+        "    # Si es así, imprimir \"CUMPLE con la norma G-25\".\n",
+        "    print(\"CUMPLE con la norma G-25\")\n",
+        "# Usar 'else' para el caso restante (mayor a 30).\n",
+        "else: # resistencia > 30\n",
+        "    # En el 'else', imprimir \"CUMPLE y supera excepcionalmente la norma G-25\".\n",
+        "    print(\"CUMPLE y supera excepcionalmente la norma G-25\")"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Este programa verifica la resistencia de una probeta de concreto.\n",
+            "Ingrese la resistencia obtenida en el ensayo (en MPa): 38\n",
+            "CUMPLE y supera excepcionalmente la norma G-25\n"
+          ]
+        }
+      ]
     }
   ]
 }
