Carga acumulada en columna

--- a/Semana_2_y_3_.ipynb
+++ b/Semana_2_y_3_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNETL4wkFOh+coklujdWjci",
+      "authorship_tag": "ABX9TyOItDd9X2i5FDYqvdQvBId8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,7 +142,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f6800605",
-        "outputId": "4d31f6fd-42f9-4f37-c645-39a2243374e4"
+        "outputId": "b414c088-c261-4af2-fb9c-f0563a2fedde"
       },
       "source": [
         "# Explicar que el programa verifica la resistencia de una probeta de concreto.\n",
@@ -175,15 +175,102 @@
         "    # En el 'else', imprimir \"CUMPLE y supera excepcionalmente la norma G-25\".\n",
         "    print(\"CUMPLE y supera excepcionalmente la norma G-25\")"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Este programa verifica la resistencia de una probeta de concreto.\n",
-            "Ingrese la resistencia obtenida en el ensayo (en MPa): 38\n",
+            "Ingrese la resistencia obtenida en el ensayo (en MPa): 100\n",
             "CUMPLE y supera excepcionalmente la norma G-25\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Situación 2: Cálculo de Carga Acumulada en una Columna\n",
+        "\n",
+        "Una columna soporta las cargas de varios pisos de un edificio. Debes crear un programa que pregunte cuántos pisos hay y luego pida la carga\n",
+        "de cada piso para finalmente calcular la carga total que llega a la cimentación.\n",
+        "\n",
+        "• Paso a Paso del Código (Guía para el Notebook)\n",
+        "1. # Inicializar una variable para la carga total en 0.\n",
+        "2. # Preguntar al usuario cuántos pisos tiene el edificio.\n",
+        "3. # Guardar el número de pisos en una variable.\n",
+        "4. # Crear un bucle 'for' que se ejecute tantas veces como el número de pisos.\n",
+        "5. # Dentro del bucle, pedir al usuario la carga del piso actual en toneladas (ej.,\n",
+        "\"Ingrese la carga del piso 1:\").\n",
+        "6. # Añadir esta carga a la variable de carga total.\n",
+        "7. # Una vez finalizado el bucle, mostrar la carga total acumulada que la columna\n",
+        "transmite a la cimentación."
+      ],
+      "metadata": {
+        "id": "GccI_7M1O7xm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "678e07bc",
+        "outputId": "1bd076e9-9700-4168-bce1-6912d1a6017e"
+      },
+      "source": [
+        "# Inicializar una variable para la carga total en 0.\n",
+        "carga_total = 0\n",
+        "\n",
+        "# Preguntar al usuario cuántos pisos tiene el edificio.\n",
+        "while True:\n",
+        "    num_pisos_str = input(\"¿Cuántos pisos tiene el edificio? \")\n",
+        "    if not num_pisos_str:\n",
+        "        print(\"Por favor, ingrese el número de pisos.\")\n",
+        "    else:\n",
+        "        try:\n",
+        "            num_pisos = int(num_pisos_str)\n",
+        "            if num_pisos <= 0:\n",
+        "                print(\"El número de pisos debe ser mayor a cero.\")\n",
+        "            else:\n",
+        "                break  # Exit the loop if conversion is successful and number of floors is positive\n",
+        "        except ValueError:\n",
+        "            print(\"Entrada inválida. Por favor ingrese un número entero válido.\")\n",
+        "\n",
+        "\n",
+        "# Crear un bucle 'for' que se ejecute tantas veces como el número de pisos.\n",
+        "for i in range(1, num_pisos + 1):\n",
+        "    # Dentro del bucle, pedir al usuario la carga del piso actual en toneladas\n",
+        "    while True:\n",
+        "        carga_piso_str = input(f\"Ingrese la carga del piso {i} (en toneladas): \")\n",
+        "        if not carga_piso_str:\n",
+        "            print(\"Por favor, ingrese la carga del piso.\")\n",
+        "        else:\n",
+        "            try:\n",
+        "                carga_piso = float(carga_piso_str)\n",
+        "                # Añadir esta carga a la variable de carga total.\n",
+        "                carga_total += carga_piso\n",
+        "                break # Exit the inner loop if conversion is successful\n",
+        "            except ValueError:\n",
+        "                print(\"Entrada inválida. Por favor ingrese un número válido.\")\n",
+        "\n",
+        "# Una vez finalizado el bucle, mostrar la carga total acumulada.\n",
+        "print(f\"\\nLa carga total acumulada en la columna es: {carga_total} toneladas\")"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "¿Cuántos pisos tiene el edificio? 3\n",
+            "Ingrese la carga del piso 1 (en toneladas): 123\n",
+            "Ingrese la carga del piso 2 (en toneladas): 342\n",
+            "Ingrese la carga del piso 3 (en toneladas): 456\n",
+            "\n",
+            "La carga total acumulada en la columna es: 921.0 toneladas\n"
           ]
         }
       ]
